# boRat

./: .gitignore  LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py
boRat/: __init__.py  beltrami_michell.py  config.py  model.py  plots.py  rock.py  stress.py  tensor.py  wellbore.py  zroots.py
tests/: test_all.py  test_model.py  test_rock.py  test_stress.py  test_tensor.py  test_wellbore.py
