[metadata]
name = boRat
author = MWK Solution
author_email = mjwk1020@gmail.com
license = CC BY-NC-ND 4.0
licence_files = LICENSE.txt
description = Stress model for deviated borehole in anisotropic rock
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
url = https://github.com/MWKSolution/boRat
classifiers =
  Development Status :: 1 - Planning
  License :: CC BY-NC-ND 4.0 License
  Programming Language :: Python :: 3
[options]
packages = boRat